--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,10 @@
-<div class="container-fluid">
+<app-header></app-header>
+<div class="container">
     <div class="row">
         <div class="col-12">
-            <app-header></app-header>
+            <app-recipes></app-recipes>
+            <app-shopping-list></app-shopping-list>
         </div>
     </div>
 </div>
-<hr>
-<div class="container">
-    <div class="row">
-        <div class="col-12"><h2 class="font-weight-bold">Body</h2></div>
-    </div>
-</div>
+
