--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,1 +1,34 @@
-<p>recipe-detail works!</p>
+<div class="row">
+    <div class="col-12">
+        <img src="" alt="" class="img-fluid">
+    </div>
+</div>
+<div class="row">
+    <div class="col-12">
+        <h2>Recipe Name</h2>
+    </div>
+</div>
+<div class="row">
+    <div class="col-12">
+        <div class="btn-group">
+            <button type="button"
+                    class="btn btn-primary dropdown-toggle">Manage Recipe <span class="caret"></span>
+            </button>
+            <div class="dropdown-menu dropdown-menu-right">
+                <a class="dropdown-item" href="#">Add ingredient to Shopping List</a>
+                <a class="dropdown-item" href="#">Edit Recipe</a>
+                <a class="dropdown-item" href="#">Delete Recipe</a>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-12">
+        <h6>Description</h6>
+    </div>
+</div>
+<div class="row">
+    <div class="col-12">
+        <h6>Ingredients</h6>
+    </div>
+</div>
