--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,1 +1,23 @@
-<p>shopping-edit works!</p>
+<div class="row">
+    <div class="col-12">
+        <form action="">
+            <div class="row">
+                <div class="col-sm-5 form-group">
+                    <label for="name"></label>
+                    <input type="text" id="name" class="form-control">
+                </div>
+                <div class="col-sm-2 form-group">
+                    <label for="amount"></label>
+                    <input type="number" id="amount" class="form-control">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <button class="btn btn-success">Add</button>
+                    <button class="btn btn-danger">Delete</button>
+                    <button class="btn btn-primary">Clear</button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
