--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,8 +10,12 @@
 
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                        <li class="nav-item active"><a class="nav-link" href="#" (click)="onSelect('recipe')">Recipes</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#" (click)="onSelect('shopping-list')">Shopping List</a></li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#" (click)="onSelect('recipe')">Recipes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#" (click)="onSelect('shopping-list')">Shopping List</a>
+                        </li>
                     </ul>
                     <ul class="navbar-nav mt-2 mt-lg-0">
                         <li class="nav-item dropdown">
