--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,19 +1,29 @@
 <div class="row">
     <div class="col-12">
-        <form action="">
+        <form [formGroup]="ingredientForm" (ngSubmit)="onSubmit()">
             <div class="row">
                 <div class="col-sm-5 form-group">
                     <label for="name"></label>
-                    <input type="text" id="name" class="form-control">
+                    <input
+                            type="text"
+                            id="name"
+                            class="form-control"
+                            formControlName="ingredientName"
+                    >
                 </div>
                 <div class="col-sm-2 form-group">
                     <label for="amount"></label>
-                    <input type="number" id="amount" class="form-control">
+                    <input
+                            type="number"
+                            id="amount"
+                            class="form-control"
+                            formControlName="ingredientAmount"
+                    >
                 </div>
             </div>
             <div class="row">
                 <div class="col-12">
-                    <button class="btn btn-success">Add</button>
+                    <button type="submit" class="btn btn-success">Add</button>
                     <button class="btn btn-danger">Delete</button>
                     <button class="btn btn-primary">Clear</button>
                 </div>
