--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -13,11 +13,12 @@
 </div>
 <div class="row">
     <div class="col-12">
-        <div class="btn-group">
+        <div class="btn-group" appDropdown #ref="appDropdown">
             <button type="button"
+                    data-toggle="dropdown"
                     class="btn btn-primary dropdown-toggle">Manage Recipe <span class="caret"></span>
             </button>
-            <div class="dropdown-menu dropdown-menu-right">
+            <div class="dropdown-menu dropdown-menu-right" [ngClass]="{'show':ref.isOpen}">
                 <a class="dropdown-item" href="#">Add ingredient to Shopping List</a>
                 <a class="dropdown-item" href="#">Edit Recipe</a>
                 <a class="dropdown-item" href="#">Delete Recipe</a>
